[gd_scene load_steps=4 format=3 uid="uid://cjcaui5tg3647"]

[ext_resource type="Script" path="res://player.gd" id="1_h054h"]
[ext_resource type="PackedScene" uid="uid://dtfiofqadvu3h" path="res://weapon.tscn" id="2_wuypk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2adgn"]

[node name="Player" type="CharacterBody2D" groups=["players"]]
script = ExtResource( "1_h054h" )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( "CircleShape2D_2adgn" )

[node name="Weapon" parent="." instance=ExtResource( "2_wuypk" )]

[node name="GUI" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_right = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_left = 12
theme_override_constants/margin_bottom = 12

[node name="HUD" type="Control" parent="GUI/MarginContainer"]
offset_left = 12.0
offset_top = 12.0
offset_right = 1012.0
offset_bottom = 588.0

[node name="Container" type="HBoxContainer" parent="GUI/MarginContainer/HUD"]
minimum_size = Vector2(0, 64)
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -64.0
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="Control" type="Control" parent="GUI/MarginContainer/HUD/Container"]
minimum_size = Vector2(100, 80)
offset_right = 100.0
offset_bottom = 80.0
size_flags_horizontal = 2
size_flags_vertical = 3

[node name="ItemPanel" type="Panel" parent="GUI/MarginContainer/HUD/Container/Control"]
minimum_size = Vector2(100, 80)
anchor_top = 0.5
anchor_bottom = 0.5
grow_vertical = 2
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="Spacer" type="Control" parent="GUI/MarginContainer/HUD/Container"]
offset_left = 500.0
offset_right = 500.0
offset_bottom = 80.0

[node name="Control2" type="Control" parent="GUI/MarginContainer/HUD/Container"]
minimum_size = Vector2(100, 80)
offset_left = 900.0
offset_right = 1000.0
offset_bottom = 80.0
size_flags_horizontal = 10
size_flags_vertical = 3

[node name="WeaponPanel" type="Panel" parent="GUI/MarginContainer/HUD/Container/Control2"]
minimum_size = Vector2(100, 80)
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 0
grow_vertical = 2
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="CurrentClip" type="Label" parent="GUI/MarginContainer/HUD/Container/Control2"]
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.0
offset_right = 40.0
offset_bottom = 13.0
theme_override_font_sizes/font_size = 18
text = "---"

[node name="MaxClip" type="Label" parent="GUI/MarginContainer/HUD/Container/Control2"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -13.0
offset_bottom = 13.0
theme_override_font_sizes/font_size = 18
text = "---"

[node name="ReloadProgressBar" type="ProgressBar" parent="."]
minimum_size = Vector2(128, 16)
offset_left = -64.0
offset_top = -80.0
offset_right = 64.0
offset_bottom = -64.0
step = 0.1
percent_visible = false
